AppJS v2.3.1 changelog:
 * CloseModal is now prototype method of AppJs
 * Modal window is not closed when window is resized
 * OpenModal now accepts callback to content drawer

AppJS v2.1.1 changelog:
 * Fixed broken font sizes in toolbar
 * Segue UI Light used even on non-Windows devices

AppJS v2.0.0 changelog:
 * template.js rewritten to be simpler and more versatile and was embedded into app.js
 * OpenModal/CloseModal added to template.js
 * ReadFontSizeCache added to app.js
 * AppJsElement.SetText supports text with HTML tags
 * GetDOM renamed to just $
 * Pages are now added via AddPage method

AppJS v1.0.0 changelog:
 * Initial release