@@ -7,10 +7,7 @@ appx.AddPage(
         new AppJsButton('Open modal', () => {
             appx.OpenModal(
                 'Modal', 
-                c => {
-                    var fontSize = ReadFontSizeCache(0, 0, ID('AppJsModal'));
-                    c.SetText('Some text', fontSize);
-                }, 
+                (content, fontSize) => { content.SetText('Some text', fontSize); }, 
                 0.8, 0.8);
         }),
         new AppJsButton('Next Page', () => {
