@@ -1,5 +1,17 @@
 LifeCounter v4.X.X changelog:
+ * Added modal window for direct score editing - tap the score when the option is enabled in Advanced settings
  * Fixed bad heading of score history modal
+
+Known issues:
+ * You have to manually prevent your device from dimming the screen/locking itself when using the app
+
+Known compatibility:
+ * Firefox on Android
+ * Chrome on Android
+ * Edge
+ * Firefox
+
+---
 
 LifeCounter v4.11.2 changelog:
  * Fixed broken play button of game time tracking when pages are changed
